@@ -7,6 +7,7 @@ v0.6.3
 - [aqab0N] Unicode fix
 - Ability to restore deleted shortcut via 308
 - Global override adjustments
+- Fix clonebackground/clonewidgets; add cloneproperties
 
 v0.6.0
 - Version bump for Isengard repo.
